function to map free text from SDRF to Ontology terms
