# swagger_server/models/map_template_column.py
@@ -1,0 +1,95 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from models.template_column import TemplateColumn
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class MapTemplateColumn(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, free_text_column: str=None, template_column: TemplateColumn=None):  # noqa: E501
+        """MapTemplateColumn - a model defined in Swagger
+
+        :param free_text_column: The free_text_column of this MapTemplateColumn.  # noqa: E501
+        :type free_text_column: str
+        :param template_column: The template_column of this MapTemplateColumn.  # noqa: E501
+        :type template_column: TemplateColumn
+        """
+        self.swagger_types = {
+            'free_text_column': str,
+            'template_column': TemplateColumn
+        }
+
+        self.attribute_map = {
+            'free_text_column': 'freeTextColumn',
+            'template_column': 'templateColumn'
+        }
+
+        self._free_text_column = free_text_column
+        self._template_column = template_column
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'MapTemplateColumn':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The MapTemplateColumn of this MapTemplateColumn.  # noqa: E501
+        :rtype: MapTemplateColumn
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def free_text_column(self) -> str:
+        """Gets the free_text_column of this MapTemplateColumn.
+
+        characteristics[organism]  # noqa: E501
+
+        :return: The free_text_column of this MapTemplateColumn.
+        :rtype: str
+        """
+        return self._free_text_column
+
+    @free_text_column.setter
+    def free_text_column(self, free_text_column: str):
+        """Sets the free_text_column of this MapTemplateColumn.
+
+        characteristics[organism]  # noqa: E501
+
+        :param free_text_column: The free_text_column of this MapTemplateColumn.
+        :type free_text_column: str
+        """
+        if free_text_column is None:
+            raise ValueError("Invalid value for `free_text_column`, must not be `None`")  # noqa: E501
+
+        self._free_text_column = free_text_column
+
+    @property
+    def template_column(self) -> TemplateColumn:
+        """Gets the template_column of this MapTemplateColumn.
+
+
+        :return: The template_column of this MapTemplateColumn.
+        :rtype: TemplateColumn
+        """
+        return self._template_column
+
+    @template_column.setter
+    def template_column(self, template_column: TemplateColumn):
+        """Sets the template_column of this MapTemplateColumn.
+
+
+        :param template_column: The template_column of this MapTemplateColumn.
+        :type template_column: TemplateColumn
+        """
+
+        self._template_column = template_column
